tests/cjs_esm_interop/cjs_esm_interop.exp
Error ------------------------------------------------------------------------------------------------------ test.js:7:2

Cannot cast `bar` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:7:2
   7| (bar: string); // error: number ~> string
       ^^^

References:
   test.js:6:18
   6| declare var bar: Bar;
                       ^^^ [1]
   test.js:7:7
   7| (bar: string); // error: number ~> string
            ^^^^^^ [2]



Found 1 error
